adjust drawable items

--- a/index.html
+++ b/index.html
@@ -4,11 +4,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Movable Parts</title>
+  <style>
+    * {
+      box-sizing: border-box;
+    }
+    body {
+      margin: 0;
+      padding: 0;
+    }
+
+    svg {
+      max-width: 100%;
+      max-height: 100vh;
+      border: 1px solid #000;
+    }
+  </style>
   <script src="/index.js" type="module" async></script>
 </head>
 <body>
   <movable-parts>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 800"></svg>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1600 1200"></svg>
   </movable-parts>
 </body>
 </html>
